--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147751323-2">
 </script>
 <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-147751323-2")</script>
+<style>
+html { 
+  background: url(tea_towel_barocco3.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+</style>
 </head>
 <body>
 </body>
