--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
 <!doctype html>
 <html lang="en">
 <head>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-147751323-2">
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-759YDBZZPV"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    // gtag('config', 'G-759YDBZZPV', { 'send_page_view': false });
+    gtag('config', 'G-759YDBZZPV');
 </script>
-<script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-147751323-2")</script>
+
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147751323-2"> -->
+<!-- </script> -->
+<!-- <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-147751323-2")</script> -->
 <style>
 html { 
   background: url(tea_towel_barocco3.jpg) no-repeat center center fixed; 
@@ -16,5 +31,6 @@ html {
 </head>
 <body>
   test text
+  <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
