--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     }
     gtag('js', new Date());
 
-    // gtag('config', 'G-759YDBZZPV', { 'send_page_view': false });
-    gtag('config', 'G-759YDBZZPV');
+    gtag('config', 'G-759YDBZZPV', { 'send_page_view': false });
+    
 </script>
 
 <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147751323-2"> -->
