--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     gtag('config', 'G-759YDBZZPV', { 'send_page_view': false });
     
 </script>
-
+<title>Nataliias Lin</title>
 <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147751323-2"> -->
 <!-- </script> -->
 <!-- <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-147751323-2")</script> -->
